--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "progress": "^1.1.8"
   },
   "devDependencies": {
+    "babel-cli": "^6.18.0",
     "babel-core": "^6.18.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-stage-1": "^6.16.0"
