--- a/package.json
+++ b/package.json
@@ -1,30 +1,22 @@
 {
-  "name": "copydiff",
+  "name": "fuckingcopy",
   "version": "0.1.0",
-  "description": "Copy all files from one path to another that don't already exist in the destination path",
-  "main": "dist/index.js",
+  "description": "Fuck you. Copying files sucks. Globs only",
+  "main": "./dist/index.js",
   "scripts": {
-    "build": "babel index.js --out-dir ./dist",
-    "build:watch": "babel index.js --out-dir ./dist --watch",
-    "copy": "node dist/index"
+    "build": "babel ./src --out-dir ./dist",
+    "build:watch": "babel ./src --out-dir ./dist --watch"
   },
-  "keywords": [
-    "copy",
-    "files",
-    "exclude"
-  ],
   "author": "Benjamin Duran <stratodyne@gmail.com>",
-  "license": "MIT",
-  "dependencies": {
-    "fs-extra": "^0.30.0",
-    "glob": "^7.1.1",
-    "minimist": "^1.2.0",
-    "progress": "^1.1.8"
-  },
+  "license": "ISC",
   "devDependencies": {
+    "babel": "^6.5.2",
     "babel-cli": "^6.18.0",
-    "babel-core": "^6.18.0",
-    "babel-preset-es2015": "^6.18.0",
+    "babel-core": "^6.21.0",
+    "babel-preset-latest": "^6.16.0",
     "babel-preset-stage-1": "^6.16.0"
+  },
+  "dependencies": {
+    "glob": "^7.1.1"
   }
 }
