--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-preset-latest": "^6.16.0",
     "babel-preset-stage-1": "^6.16.0",
     "chai": "^3.5.0",
+    "fs-extra": "^1.0.0",
     "mocha": "^3.2.0"
   },
   "dependencies": {
