- Added repository URL - Increased timeout for tests for slower machines (or when windows defender gets in the way BECAUSE IT WILL) - Updated readme, since this is now a utility

--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "test": "mocha test/index --compilers js:babel-core/register"
   },
   "author": "Benjamin Duran <stratodyne@gmail.com>",
+  "repository": {
+    "url": "https://github.com/benduran/lazycopy"
+  },
   "license": "ISC",
   "devDependencies": {
     "babel": "^6.5.2",
