- Updated docs - Incremented version - Improved unit tests on crappy machines - Change API to not require a function call to use the copy and copySync methods

--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "lazycopy",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "Globs only. Copy stuff with ease, all while maintaining your directory structure!",
   "main": "./dist/index.js",
   "scripts": {
     "build": "babel ./src --out-dir ./dist",
     "build:watch": "babel ./src --out-dir ./dist --watch",
-    "test": "mocha test/index --compilers js:babel-core/register"
+    "test": "mocha test/index --compilers js:babel-core/register -t 60000"
   },
   "author": "Benjamin Duran <stratodyne@gmail.com>",
   "repository": {
