- Added CLI supporrt for lazy copy. Will need to add unit tests for this

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,16 +6,16 @@
     "configurations": [
         {
             "name": "Launch Program",
-            "type": "node2",
+            "type": "node",
             "request": "launch",
             "program": "${workspaceRoot}\\dist\\index.js",
             "cwd": "${workspaceRoot}"
         },
         {
             "name": "Attach to Process",
-            "type": "node2",
+            "type": "node",
             "request": "attach",
-            "port": 9229
+            "port": 5858
         }
     ]
 }
