--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
   },
   "dependencies": {
     "glob": "^7.1.1",
-    "minimist": "^1.2.0"
+    "graceful-fs": "^4.1.11",
+    "minimist": "^1.2.0",
+    "progress": "^1.1.8"
   }
 }
