--- a/package.json
+++ b/package.json
@@ -15,15 +15,16 @@
   "license": "ISC",
   "devDependencies": {
     "babel": "^6.23.0",
-    "babel-cli": "^6.23.0",
-    "babel-core": "^6.23.1",
-    "babel-preset-latest": "^6.22.0",
-    "babel-preset-stage-1": "^6.22.0",
+    "babel-cli": "^6.24.1",
+    "babel-core": "^6.24.1",
+    "babel-preset-latest": "^6.24.1",
+    "babel-preset-stage-1": "^6.24.1",
     "chai": "^3.5.0",
-    "fs-extra": "^2.0.0",
-    "mocha": "^3.2.0"
+    "fs-extra": "^3.0.0",
+    "mocha": "^3.3.0"
   },
   "dependencies": {
-    "glob": "^7.1.1"
+    "glob": "^7.1.1",
+    "graceful-fs": "^4.1.11"
   }
 }
